# typst-crystalline

./: .agentrules  .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  LEGACY_MAP.md  PROJECT_MAP.md  README.md  arvore.txt  crystalline.toml  init-tekt.sh  map.txt  typst_cristal_tree.txt
01_core/: 01_core_MAP.md  Cargo.toml  DEBT.md  args_logic.rs  compile_logic.rs  compiler_logic.rs  completions_logic.rs  deps_logic.rs  diagnostics.rs  download_logic.rs  eval_logic.rs  fonts_logic.rs  greet_logic.rs  ide_analyze_logic.rs  info_logic.rs  init_logic.rs  lib.rs  main_logic.rs  packages_logic.rs  query_logic.rs  terminal_logic.rs  timings_logic.rs  update_logic.rs  watch_logic.rs  world_logic.rs
01_core/lexicon/: Cargo.toml  lexicon_MAP.md
01_core/lexicon/src/: lexer.rs  package.rs  parser.rs  source.rs
01_core/materialization/: Cargo.toml  materialization_MAP.md  typst-realize_MAP.md
01_core/materialization/src/: lib.rs
01_core/metaprogramming/: Cargo.toml  metaprogramming_MAP.md  typst-macros_MAP.md
01_core/metaprogramming/src/: cast.rs  time.rs
01_core/primitives/: Cargo.toml  primitives_MAP.md  typst-library_MAP.md
01_core/primitives/src/: diag.rs  engine.rs  lib.rs  routines.rs
01_core/primitives/src/foundations/: args.rs  (+22 more)
01_core/semantics/: Cargo.toml  semantics_MAP.md  typst-eval_MAP.md
01_core/semantics/src/: access.rs  binding.rs  call.rs  code.rs  flow.rs  import.rs  lib.rs  markup.rs  math.rs  methods.rs  ops.rs  rules.rs  vm.rs
01_core/shared/: Cargo.toml  shared_MAP.md
01_core/shared/src/: diagnostics.rs  hash.rs  lib.rs  round.rs
01_core/src/: lib.rs  utils.rs
01_core/src/contracts/: mod.rs  world.rs
01_core/src/entities/: args.rs  axes.rs  bib_entry.rs  bib_store.rs  citation_form.rs  color.rs  content.rs  content_hash.rs  corners.rs  counter_registry.rs  counter_state.rs  counter_state_legacy.rs  counter_update.rs  dir.rs  element_info.rs  element_kind.rs  element_payload.rs  engine.rs  file_id.rs  font_book.rs  font_list.rs  func.rs  geometry.rs  glyph_variants.rs  gradient.rs  image_sizer.rs  introspector.rs  label.rs  label_registry.rs  lang.rs  layout_types.rs  layouter_runtime_state.rs  location.rs  locator.rs  math_class.rs  math_constants.rs  metadata_store.rs  mod.rs  module.rs  operators.rs  (+30 more)
01_core/src/rules/: eval.rs  introspect.rs  layout.rs  mod.rs  parse.rs  scopes.rs  stdlib.rs
01_core/typesetting/: Cargo.toml  typesetting_MAP.md  typst-layout_MAP.md
01_core/typesetting/src/: image.rs  lists.rs  modifiers.rs  pad.rs  repeat.rs  rules.rs  shapes.rs  stack.rs  transforms.rs
01_core/typst-macros/src/: elem.rs  util.rs
01_core/typst-syntax/: typst-syntax_MAP.md
01_core/typst-utils/: typst-utils_MAP.md
02_shell/: 02_shell_MAP.md  Cargo.toml  compiler_controller.rs  compiler_proxy.rs  compiler_service.rs  ide_analyze_service.rs  lib.rs
02_shell/interaction/: Cargo.toml  interaction_MAP.md  typst-ide_MAP.md
02_shell/interaction/src/: analyze.rs  complete.rs  definition.rs  diagnostics_shield.rs  jump.rs  lib.rs  matchers.rs  tests.rs  tooltip.rs  utils.rs
02_shell/profiling/: Cargo.toml  profiling_MAP.md  typst-timing_MAP.md
02_shell/src/: cli.rs  diagnostic.rs  lib.rs
02_shell/terminal/: Cargo.toml  terminal_MAP.md  typst-cli_MAP.md
02_shell/terminal/src/: args.rs  compile.rs  download.rs  eval.rs  fonts.rs  greet.rs  info.rs  init.rs  main.rs  package.rs  query.rs  server.rs  terminal.rs  timings.rs  update.rs  watch.rs  world.rs
02_shell/typst-diagnostics/: shield.rs  typst-diagnostics_MAP.md
03_infra/: 03_infra_MAP.md  Cargo.toml  args_io_impl.rs  compile_io_impl.rs  compiler_io_impl.rs  completions_io_impl.rs  deps_io_impl.rs  download_io_impl.rs  eval_io_impl.rs  fonts_io_impl.rs  greet_io_impl.rs  ide_env_impl.rs  info_io_impl.rs  init_io_impl.rs  main_io_impl.rs  packages_io_impl.rs  query_io_impl.rs  terminal_io_impl.rs  timings_io_impl.rs  update_io_impl.rs  watch_io_impl.rs  world_io_impl.rs
03_infra/ancillary/: Cargo.toml  ancillary_MAP.md  typst-kit_MAP.md
03_infra/ancillary/src/: fonts.rs  package.rs
03_infra/fuzz/: Cargo.toml  fuzz_MAP.md
03_infra/fuzzing/: Cargo.toml  fuzzing_MAP.md
03_infra/fuzzing/src/: lib.rs
03_infra/html/: Cargo.toml  html_MAP.md  typst-html_MAP.md
03_infra/html/src/: document.rs  encode.rs  fragment.rs  lib.rs  rules.rs  typed.rs
03_infra/pdf/: Cargo.toml  pdf_MAP.md  typst-pdf_MAP.md
03_infra/pdf/src/: attach.rs  convert.rs  image.rs  lib.rs  link.rs  metadata.rs  outline.rs  page.rs  paint.rs  shape.rs  text.rs  util.rs
03_infra/raster/: Cargo.toml  raster_MAP.md
03_infra/raster/src/: image.rs  lib.rs  paint.rs  shape.rs  text.rs
03_infra/src/: diagnostic_format.rs  export.rs  font_metrics.rs  fonts.rs  image_sizer.rs  integration_tests.rs  layout.rs  lib.rs  measurements.rs  pipeline.rs  query_helpers.rs  world.rs
03_infra/svg/: Cargo.toml  svg_MAP.md
03_infra/svg/src/: lib.rs  shape.rs  text.rs
03_infra/typst-html/: Cargo.toml
03_infra/typst-html/src/: convert.rs  css.rs  document.rs  dom.rs  encode.rs  fragment.rs  lib.rs  link.rs  rules.rs  typed.rs
03_infra/typst-kit/: Cargo.toml
03_infra/typst-kit/src/: download.rs  fonts.rs
03_infra/typst-render/: typst-render_MAP.md
03_infra/typst-svg/: Cargo.toml  typst-svg_MAP.md
03_infra/typst-svg/src/: image.rs  lib.rs  paint.rs
04_wiring/: 04_wiring_MAP.md  Cargo.toml  app_compiler.rs  app_wiring.rs  build.rs
04_wiring/fusion/src/: diagnostics_bridge.rs  lib.rs
04_wiring/src/: diagnostics_bridge.rs  eviction.rs  ide_analyze.rs  lib.rs  main.rs  src_MAP.md
04_wiring/tests/: cli.rs
04_wiring/typst/: typst_MAP.md
lab/: Cargo.toml
lab/parity/: Cargo.toml  SKIPS.md
lab/parity/src/: compact.rs  frame_dto.rs  main.rs  report.rs  structural_compare.rs  value_dto.rs  vanilla_invoke.rs
lab/parity/tests/: consolidado_p206d.rs  eval_parity.rs  layout_parity.rs  parse_parity.rs  structural_parity.rs  vanilla_cli_smoke.rs
tests/: Cargo.toml
tests/src/: collect.rs  custom.rs  output.rs  pdftags.rs  run.rs  tests.rs  world.rs
tests/suite/pdftags/: break.typ
(+1961 files in other folders)
