[workspace]
resolver = "2"
members = [
    "01_core",
    "02_shell",
    "03_infra",
    "04_wiring",
    # lab/typst-original não é membro do workspace cristalino
    # compile separadamente se necessário para testes de paridade
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Typst GmbH <hi@typst.app>"]
license     = "Apache-2.0"
repository  = "https://github.com/typst/typst"

[workspace.dependencies]
thiserror = "2"
comemo    = "0.4"
ecow      = "0.2"   # L3 apenas — fronteira; não entra em L1 (ADR-0004 Opção C)
anyhow    = "1"
# grupo Unicode — ADR-0010 a ADR-0013
unicode-ident        = "1"
unicode-math-class   = "0.1"
unicode-script       = "0.5"
unicode-segmentation = "1"
