[workspace]
resolver = "2"
members = [
    "01_core",
    "02_shell",
    "03_infra",
    "04_wiring",
    # lab/typst-original não é membro do workspace cristalino
    # compile separadamente se necessário para testes de paridade
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Typst GmbH <hi@typst.app>"]
license     = "Apache-2.0"
repository  = "https://github.com/typst/typst"

[workspace.dependencies]
thiserror  = "2"
comemo     = "0.4"
rustc-hash = "2"    # ADR-0018 — hashing eficiente em L1 (revoga ADR-0007)
ttf-parser  = "0.25"  # ADR-0019 — parsing de fontes OpenType/TrueType em L3
rustybuzz   = "0.20"  # ADR-0019 — shaping de texto em L3
time        = { version = "0.3", features = ["macros"] }  # ADR-0021 — aritmética de datas
indexmap    = { version = "2", features = [] }            # ADR-0023 — ordem de inserção em Scope
ecow      = "0.2"   # L3 apenas — fronteira; não entra em L1 (ADR-0004 Opção C)
anyhow    = "1"
clap      = { version = "4", features = ["derive", "env"] }  # ADR-0047 — argparsing; Passo 123 activa "env" para TYPST_ROOT/TYPST_FONT_PATHS
# grupo Unicode — ADR-0010 a ADR-0013
unicode-ident        = "1"
unicode-math-class   = "0.1"
unicode-script       = "0.5"
unicode-segmentation = "1"
hypher               = "0.1"   # ADR-0057 — hyphenation patterns embebidos (no_std, zero deps)
