[package]
name        = "typst-core"
description = "Pure domain logic for the Typst compiler"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
thiserror            = { workspace = true }
comemo               = { workspace = true }
rustc-hash           = { workspace = true }  # ADR-0018
# grupo Unicode — ADR-0010 a ADR-0013
unicode-ident        = { workspace = true }
unicode-math-class   = { workspace = true }
unicode-script       = { workspace = true }
unicode-segmentation = { workspace = true }
time                 = { workspace = true }  # ADR-0021 — Datetime real
indexmap             = { workspace = true }  # ADR-0023 — Scope com ordem de inserção
ecow                 = { workspace = true }  # ADR-0024 — EcoString em Value::Str
hypher               = { workspace = true }  # ADR-0057 — hyphenation patterns no_std, zero deps
