[package]
name        = "typst-infra"
description = "I/O implementations for the Typst compiler"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
typst-core = { path = "../01_core" }
thiserror  = { workspace = true }
# comemo: eval() tracking. Promovido de [dev-dependencies] a
# [dependencies] no Passo 113 (ADR-0046) quando `pipeline.rs` expôs
# `eval_to_module_with_sink` como API pública consumível pelo 04_wiring.
comemo     = { workspace = true }
# `clap` foi removido no Passo 117 (ADR-0049): `ColorWhen` e
# `resolve_colored_with` migraram para L2 (`02_shell/src/cli.rs`),
# onde a CLI realmente vive. L3 voltou a ser I/O puro.
ttf-parser  = { workspace = true }  # ADR-0019 — parsing de fontes
rustybuzz   = { workspace = true }  # ADR-0019 — shaping de texto
time        = { workspace = true }  # ADR-0021 — today() em SystemWorld
imagesize   = "0.12"                # leitura de cabeçalho de imagem — L3 apenas
image       = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
flate2      = "1.0"                 # compressão Zlib para PNG /FlateDecode

[dev-dependencies]
# `EcoString` em testes do dispatch font-aware (Passo 140B): tests
# constroem `FontList::single(EcoString::from(...))`. `ecow` já é
# dep transitiva via `typst-core`; promovida a dev-dep explícita
# por ser usada no #[cfg(test)] de `pipeline.rs`.
ecow = { workspace = true }
