[package]
name        = "typst-infra"
description = "I/O implementations for the Typst compiler"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
typst-core = { path = "../01_core" }
thiserror  = { workspace = true }
# comemo: eval() tracking. Promovido de [dev-dependencies] a
# [dependencies] no Passo 113 (ADR-0046) quando `pipeline.rs` expôs
# `eval_to_module_with_sink` como API pública consumível pelo 04_wiring.
comemo     = { workspace = true }
# `EcoString`: P207D (M9c) precisa do tipo em `CountingIntrospector`
# para delegar `Introspector::page_numbering(...) -> Option<&EcoString>`.
# Antes era dev-dep apenas; promovido aqui por ser usado na impl
# trait production.
ecow       = { workspace = true }
# `clap` foi removido no Passo 117 (ADR-0049): `ColorWhen` e
# `resolve_colored_with` migraram para L2 (`02_shell/src/cli.rs`),
# onde a CLI realmente vive. L3 voltou a ser I/O puro.
ttf-parser  = { workspace = true }  # ADR-0019 — parsing de fontes
rustybuzz   = { workspace = true }  # ADR-0019 — shaping de texto
time        = { workspace = true }  # ADR-0021 — today() em SystemWorld
imagesize   = "0.12"                # leitura de cabeçalho de imagem — L3 apenas
image       = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
flate2      = "1.0"                 # compressão Zlib para PNG /FlateDecode

[dev-dependencies]
# (P207D 2026-05-12: `ecow` promovido a `[dependencies]` porque
# `CountingIntrospector::page_numbering` delega `Option<&EcoString>`.
# Sem entries em dev-dependencies remanescentes — tests P140B
# continuam a usar transitivamente via `[dependencies]`.)
