[package]
name        = "typst-wiring"
description = "Composition root for the Typst compiler"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "typst"
path = "src/main.rs"

[dependencies]
typst-core  = { path = "../01_core" }
typst-shell = { path = "../02_shell" }
typst-infra = { path = "../03_infra" }
anyhow      = { workspace = true }
# `clap` foi removido no Passo 117 (ADR-0049): CLI vive agora em L2
# (`02_shell/src/cli.rs`). L4 é composição pura — chama
# `typst_shell::cli::parse()` e orquestra o pipeline.
