[package]
name = "materialization"
description = "Typst's realization subsystem."
version = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }

[dependencies]
primitives = { workspace = true }
metaprogramming = { workspace = true }
lexicon = { workspace = true }
profiling = { workspace = true }
shared = { workspace = true }
arrayvec = { workspace = true }
bumpalo = { workspace = true }
comemo = { workspace = true }
ecow = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
