[package]
name = "fuzzing"
version.workspace = true
edition.workspace = true
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
fusion = { workspace = true }
typst-assets = { workspace = true, features = ["fonts"] }
pdf = { workspace = true }
svg = { workspace = true }
html = { workspace = true }
raster = { workspace = true }
lexicon = { workspace = true }
comemo = { workspace = true }
libfuzzer-sys = { workspace = true }

[[bin]]
name = "parse"
path = "src/bin/parse.rs"
test = false
doc = false

[[bin]]
name = "paged"
path = "src/bin/paged.rs"
test = false
doc = false

[[bin]]
name = "html"
path = "src/bin/html.rs"
test = false
doc = false
